--- a/python/serverless.yml
+++ b/python/serverless.yml
@@ -32,8 +32,8 @@ functions:
           path: activity
           method: get
 
-  math:
-    handler: math.handler
+  calculate:
+    handler: calculate.handler
     events:
       - http:
           path: activity
